--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
 		</title>
 		<meta
 			name="viewport"
-			content="width=device-width, height=device-height,  initial-scale=1.0, user-scalable=no, user-scalable=0;"
+			content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, user-scalable=0;"
 		/>
 		<meta
 			property="og:title"
-			content="Поддержка бизнеса от Департамента предпринимательства и инновационного развития Москвы"
+			content="Департамент предпринимательства и инновационного развития г. Москвы"
 		/>
 		<meta
 			property="og:description"
-			content="Здесь вы найдете актуальные сведения о программах, грантах, субсидиях и других формах помощи для предпринимателей. Подайте заявку для получения государственной поддержки вашего бизнеса"
+			content="Программы развития и меры городской поддержки малого и среднего бизнеса: гранты, субсидии, обучения и консультации. Оставляйте заявку и мы поможем подобрать подходящие меры развития для вашего дела"
 		/>
 		<meta property="og:image" content="/og.png" />
 		<meta property="og:url" content="https://moscow.business/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="moscow.business" />
 		<meta property="og:locale" content="ru_RU" />
-		<meta property="og:image:width" content="1200" />
-		<meta property="og:image:height" content="630" />
+		<!-- <meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" /> -->
+		<meta name="twitter:card" content="summary_large_image" />
 
 		<link rel="icon" type="image/png" href="/favicon/16x16.png" sizes="16x16" />
 		<link rel="icon" type="image/png" href="/favicon/32x32.png" sizes="32x32" />
