--- a/index.html
+++ b/index.html
@@ -33,8 +33,18 @@
 		<meta property="og:image:height" content="630" /> -->
 		<meta name="twitter:card" content="summary_large_image" />
 
-		<link rel="icon" type="image/png" href="/favicon/16x16.png" sizes="16x16" />
-		<link rel="icon" type="image/png" href="/favicon/32x32.png" sizes="32x32" />
+		<link
+			rel="icon"
+			type="image/png"
+			href="/favicon/16x16fav.png"
+			sizes="16x16"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			href="/favicon/32x32fav.png"
+			sizes="32x32"
+		/>
 		<meta name="msapplication-TileColor" content="#ffffff" />
 		<meta name="msapplication-TileImage" content="/mstile-144x144.png" />
 		<!-- Yandex.Metrika counter -->
